[package]
name = "dlas-rs"
version = "0.1.0"
authors = ["Eliot Partridge <byte@code.horse>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
ldap3 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
env_logger = "0.8.4"
log = "0.4"
