[package]
name = "dlas-rs"
version = "0.1.0"
authors = ["Eliot Partridge <byte@code.horse>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.1", features = ["json"]}
ldap3 = "0.9"
ring = "0.16.20"
base64 = "0.13.0"
serde_json = "1.0"
serde = "1.0"
log = "0.4"
env_logger = "0.6"
tokio = "1"
derivative = "2.2.0"
